# cem2

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  RUNTIME_STATUS.md  justfile  map-attempt3.txt  map-trace.txt  map-with-pick-trace.txt  stack-depth-analysis.md  test-list-map.cem  test-map-double  test-minimal.cem  test-quot-type.cem  test-simple-map.cem  test-simple.cem
.claude/: README.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
compiler/src/ast/: mod.rs  types.rs
compiler/src/codegen/: error.rs  ir.rs  linker.rs  mod.rs
compiler/src/parser/: lexer.rs  mod.rs  parse.rs  tests.rs
compiler/src/typechecker/: checker.rs  environment.rs  errors.rs  mod.rs  unification.rs
docs/: MEMORY_MANAGEMENT.md  MULTIFIELD_VARIANT_CODEGEN_BUG.md  MUSTTAIL_ISSUE.md  PARSER_BUG_COMMA_AS_FIELD.md  PROJECT_STATUS.md  SESSION_SUMMARY.md  STACK_TRACE_ANALYSIS.md  TODO_multi_field_variants.md  multi_field_variants_bug.md
examples/: README.md  hello_world.cem  test_cons.cem  test_cons_match.cem  test_double_match.cem  test_exit_255.cem  test_exit_invalid.cem  test_list_ops.cem  test_list_simple.cem  test_match_drop1.cem  test_option.cem  test_option_match.cem  test_pair.cem
examples/core-builtins/: README.md  stack-drop.cem  stack-operations.cem  (+1 more)
runtime/: Cargo.toml
runtime/src/: conversions.rs  io.rs  lib.rs  pattern.rs  scheduler.rs  stack.rs  strings.rs
stdlib/: prelude.cem
tests/: core-operations.cem  test-core-shuffle  test-core-shuffle.cem
(+22 files in other folders)
