[workspace]
resolver = "2"
members = [
    "compiler",
    "runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"
repository = "https://github.com/navicore/cem"

[workspace.dependencies]
# Shared dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
